# iot-pipeline

./: .flake8  README.md
home_assistant/ha_workers/: worker_generation.py
home_assistant/iot_pipeline_agent/: Dockerfile  build.yaml  config.json  run.sh
home_assistant/iot_pipeline_agent/agent/: ingestion_client.py  main.py  websocket_client.py
infrastructure/cloudformation/: app.py  constants.py  pyproject.toml
infrastructure/cloudformation/lambdas/ecs_reaper/: index.py
infrastructure/cloudformation/lambdas/secret_rotation/: index.py
infrastructure/cloudformation/lambdas/start_backend/: index.py
infrastructure/cloudformation/lambdas/stop_backend/: index.py
infrastructure/cloudformation/stacks/: consumer_stack.py  infrastructure_stack.py  ingestion_stack.py  network_stack.py
services/consumer/: .dockerignore  Dockerfile  kcl.properties  pyproject.toml  run.sh
services/consumer/src/: clients.py  main.py  record_processor.py
services/consumer/src/aws_utils/: __init__.py  cloudwatch_.py  dynamodb_.py  kinesis_.py  s3_.py
services/ingestion_api/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
services/ingestion_api/app/: auth.py  main.py
services/ingestion_lambda/: app.py
services/ingestion_lambda/aws_utils/: __init__.py  cloudwatch_.py  kinesis_.py  logging_.py
