[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "consumer"
version = "0.1.1"
description = "Kinesis -> Parquet -> S3 consumer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.41.1",
    "pyarrow>=15.0.0",
    "amazon_kclpy>=3.1.3",
]
